--- a/BizPass/Base.lproj/Main.storyboard
+++ b/BizPass/Base.lproj/Main.storyboard
@@ -15,6 +15,7 @@
             <string>SFUIDisplay-Light</string>
             <string>SFUIDisplay-Light</string>
             <string>SFUIDisplay-Light</string>
+            <string>SFUIDisplay-Light</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -102,16 +103,23 @@
                                 <fontDescription key="fontDescription" name="SFUIDisplay-Light" family="SF UI Display" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                             </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Company" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iP0-JQ-Jxv">
+                                <rect key="frame" x="16" y="456" width="145" height="30"/>
+                                <fontDescription key="fontDescription" name="SFUIDisplay-Light" family="SF UI Display" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" keyboardType="URL"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.50196081399917603" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="wrG-WO-T7B" firstAttribute="top" secondItem="K7i-vc-Ssl" secondAttribute="bottom" constant="34" id="04L-HU-a9k"/>
+                            <constraint firstItem="iP0-JQ-Jxv" firstAttribute="trailing" secondItem="oKx-G7-5UD" secondAttribute="trailing" id="0I2-zY-3Fn"/>
                             <constraint firstItem="qP9-XF-Ts5" firstAttribute="trailing" secondItem="qMJ-P0-zHb" secondAttribute="trailing" id="1so-kD-6mx"/>
                             <constraint firstItem="zqh-mo-HVT" firstAttribute="baseline" secondItem="wrG-WO-T7B" secondAttribute="baseline" id="3q0-fk-ysN"/>
                             <constraint firstItem="qMJ-P0-zHb" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="7s0-PI-nCH"/>
                             <constraint firstItem="qMJ-P0-zHb" firstAttribute="leading" secondItem="qP9-XF-Ts5" secondAttribute="leading" id="DzB-4A-pbF"/>
                             <constraint firstItem="oKx-G7-5UD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="FJ6-Th-8fa"/>
+                            <constraint firstItem="iP0-JQ-Jxv" firstAttribute="leading" secondItem="oKx-G7-5UD" secondAttribute="leading" id="FLg-FL-BdP"/>
                             <constraint firstItem="Jzn-aG-Kt0" firstAttribute="trailing" secondItem="zqh-mo-HVT" secondAttribute="trailing" id="HJh-gJ-qz0"/>
                             <constraint firstItem="qP9-XF-Ts5" firstAttribute="leading" secondItem="zqh-mo-HVT" secondAttribute="leading" id="IeW-HF-0BI"/>
                             <constraint firstItem="UC5-vL-OTG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="31" id="Jsx-yj-6DN"/>
@@ -126,6 +134,7 @@
                             <constraint firstItem="K7i-vc-Ssl" firstAttribute="baseline" secondItem="Jzn-aG-Kt0" secondAttribute="baseline" id="eQU-Pb-2hn"/>
                             <constraint firstItem="oKx-G7-5UD" firstAttribute="leading" secondItem="UC5-vL-OTG" secondAttribute="leading" id="g0A-Bw-a6i"/>
                             <constraint firstItem="qMJ-P0-zHb" firstAttribute="baseline" secondItem="oKx-G7-5UD" secondAttribute="baseline" id="g3E-Hh-Iek"/>
+                            <constraint firstItem="iP0-JQ-Jxv" firstAttribute="top" secondItem="oKx-G7-5UD" secondAttribute="bottom" constant="41" id="gah-vX-hWN"/>
                             <constraint firstItem="1Si-6C-cSh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jE9-GI-FNY"/>
                             <constraint firstItem="1Si-6C-cSh" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="jfv-a0-BeJ"/>
                             <constraint firstItem="zqh-mo-HVT" firstAttribute="leading" secondItem="Jzn-aG-Kt0" secondAttribute="leading" id="kbY-vh-Z40"/>
@@ -153,7 +162,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="GtP-9t-zBM">
                     <connections>
-                        <action selector="imageTapped:" destination="BYZ-38-t0r" id="6fz-oE-3u2"/>
+                        <action selector="uploadImage:" destination="BYZ-38-t0r" id="OOB-Te-zAv"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
