tap to dismiss keyboard is now working properly.

--- a/BizPass/Base.lproj/Main.storyboard
+++ b/BizPass/Base.lproj/Main.storyboard
@@ -188,7 +188,11 @@
                         <action selector="uploadImage:" destination="BYZ-38-t0r" id="OOB-Te-zAv"/>
                     </connections>
                 </tapGestureRecognizer>
-                <tapGestureRecognizer id="tLh-MH-Ddt"/>
+                <tapGestureRecognizer id="tLh-MH-Ddt">
+                    <connections>
+                        <action selector="dismissKeyboard:" destination="BYZ-38-t0r" id="gnb-o6-b17"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
         </scene>
     </scenes>
